--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
   
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- <span class="navbar-brand mb-1 h1"></span> -->
-    <!-- <span class="navbar-brand mb-1 h1">Lawrence Snead</span> -->
-    <!-- <div class="nav-myTitle"><h1>Lawrence Snead</h1></div> -->
-    <div class="col-md-3 offset-md-1" id="myTitle">
-        <h1>Lawrence Snead</h1>
-    </div>
+      <a  href="index.html">
+      <div class="col-md-3 offset-md-1" id="myTitle">
+          <h1>Lawrence Snead</h1>
+      </div>
+      </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
