--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
   
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a  href="index.html">
       <div class="col-md-3 offset-md-1" id="myTitle">
-          <h1>Lawrence Snead</h1>
+          <a style="display: block" href="index.html"><h1>Lawrence Snead</h1></a>
       </div>
-      </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -51,7 +49,7 @@
 
     <!-- Second Row -->
     <div class="row">
-
+      <div class="col-xs-12 col-md-12 col-lg-12 col-centered">
         <div class="main-section">
             <div class="media">
                 <div class="media-left media-top">
@@ -65,9 +63,11 @@
                 
                 </div>
             </div>
-        </div>
-    </div>
 
+          </div>
+      </div>
+
+    </div>
   </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -77,7 +77,7 @@
 <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-12" id="footer">
+        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" id="footer">
           Copyright &copy;
         </div>
       </div>
