Added final touches to reponsiveness. Also tweaked my name on the nav bar to display correctly. Adding comments and readme file next.

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           <div class="container">
               
             <div class="row">
-              <div class="col-xs-12  col-md-12 col-lg-12">
+              <div class="col-xs-12  col-md-12 col-lg-12 col-centered">
                 <div class="main-section">
                     <h1>Contact</h1>
                     <div class="form-group">
