--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="main-section">
             <div class="media">
                 <div class="media-left media-top">
-                  <img src="assets/images/Me.jpg" class="media-object" style="width:210px" id="auth-image">
+                  <img src="assets/images/Me.jpg" class="media-object" id="auth-image">
                 </div>
                 <div class="media-body">
                   <h2 class="media-heading">About Me</h2>
