--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Portfolio | Lawrence Snead</title>
+  <title>Contact | Lawrence Snead</title>
 
   <!-- Bring in our bootstrap stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -40,13 +40,13 @@
   </nav>
   <!-- End Nav -->
       <div class="wrap">
-          <!-- Creates the Overall Grid -->
           <div class="container">
               
             <div class="row">
               <div class="col-xs-12  col-md-12 col-lg-12 col-centered">
                 <div class="main-section">
                     <h1>Contact</h1>
+                    <!-- bootstrap form content -->
                     <div class="form-group">
                         <label for="usr">Name:</label>
                         <input type="text" class="form-control" id="usr" placeholder="George Washington">
@@ -65,6 +65,7 @@
             </div>      
           </div>
         </div>
+          <!-- js code for bootstrap navbar -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
