Added password generator to my portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,9 @@
       <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-centered">
               <div class="work">
-                  <a href="#"><img src="assets/images/1.jpg" class="img-fluid" alt="Placeholder"></a>
+                  <a href="https://lawrencesnead.github.io/Homework-3/"><img src="assets/images/Password_Generator.png" class="img-fluid" alt="Placeholder"></a>
                   <div class="caption">
-                      <a href="#"><h3>Placeholder</h3></a>
+                      <a href="https://lawrencesnead.github.io/Homework-3/"><h3>Password Generator</h3></a>
                   </div>
               </div>
             </div>
