--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 <head>
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contact | Lawrence Snead</title>
 
   <!-- Bring in our bootstrap stylesheet -->
@@ -15,7 +17,7 @@
 <body>
       <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="col-md-3 offset-md-1" id="myTitle">
+      <div class="col-md-3 offset-md-1 rounded" id="myTitle">
           <a style="display: block" href="index.html"><h1>Lawrence Snead</h1></a>
       </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -39,12 +41,12 @@
 
   </nav>
   <!-- End Nav -->
-      <div class="wrap">
-          <div class="container">
+      <div class="wrap-contact">
+          <div class="container-contact">
               
             <div class="row">
-              <div class="col-xs-12  col-md-12 col-lg-12 col-centered">
-                <div class="main-section">
+              <div class="col-12 col-centered">
+                <div class="main-section-contact rounded">
                     <h1>Contact</h1>
                     <!-- bootstrap form content -->
                     <div class="form-group">
@@ -59,7 +61,7 @@
                         <label for="exampleFormControlTextarea1">Message:</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                       </div>
-                        <input type="submit">
+                        <input type="submit" class="rounded">
                 </div>
               </div>
             </div>      
