--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home | Lawrence Snead</title>
 
   <!-- Bring in our bootstrap stylesheet -->
@@ -16,8 +18,8 @@
   
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="col-md-3 offset-md-1" id="myTitle">
-          <a style="display: block" href="index.html"><h1>Lawrence Snead</h1></a>
+      <div class="col offset-md-1 rounded" id="myTitle">
+          <a href="index.html"><h1>Lawrence Snead</h1></a>
       </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,9 +48,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12 col-centered">
-          <div class="main-section">
+          <div class="main-section rounded">
               <div class="media">
-                  <div class="media-left media-top">
+                  <div class="media-left media-top rounded">
                     <img src="assets/images/Me.jpg" class="media-object" id="auth-image">
                   </div>
                   <div class="media-body">
