Added links to linkedin and github. also added link to resume.

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,12 @@
           <a class="nav-link" href="portfolio.html">Portfolio |</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="https://github.com/lawrencesnead">GitHub Repository |</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.linkedin.com/in/lawrence-snead">LinkedIn |</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
@@ -62,9 +68,12 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                       </div>
                         <input type="submit" class="rounded">
+                        <h2>Contact Info</h2>
+                        <h3>Email: <a href="mailto:">Lawrence.Snead@gmail.com</a></h3>
+                        <h3>Phone: 804-201-6354</h3>
                 </div>
               </div>
-            </div>      
+            </div>     
           </div>
         </div>
           <!-- js code for bootstrap navbar -->
