--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           <a class="nav-link" href="portfolio.html">Portfolio |</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="https://github.com/lawrencesnead">GitHub Repository |</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.linkedin.com/in/lawrence-snead">LinkedIn |</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
