Fixed some bugs.

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
               <div class="work rounded">
                   <img src="assets/images/Resume.png" class="img-fluid" alt="Placeholder">
                   <div class="caption">
-                      <a href="https://lawrencesnead.github.io/Homework-3-Alternate/"><h3>Resume</h3></a>
+                      <a href="./assets/PDF/LawrenceResume.pdf"><h3>Resume</h3></a>
                   </div>
               </div>
               
