Fixed another bug.

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
   <!-- End Nav -->
 <!-- Content -->
   <div class="wrap">
-    <div class="container1">
+    <div class="container1 rounded">
       <h2>Resume</h2>
       <div class="row">
             <div class="col-6 col-centered">
