Updated portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,16 @@
                   </div>
               </div>
             </div>
+
+            <div class="col-6 col-centered">
+              <div class="work rounded">
+                  <img src="assets/images/note-taker.png" class="img-fluid" alt="Placeholder">
+                  <div class="caption">
+                      <a href="https://note-taker13.herokuapp.com/"><h3>Note Taker</h3></a>
+                      <a href="https://github.com/lawrencesnead/Note-Taker"><h3>GitHub Repository</h3></a>
+                  </div>
+              </div>
+            </div>
             
             
             <!-- <div class="col-6 col-centered">
