Updated styling and some links with new repository names.

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
               <div class="work rounded">
                   <img src="assets/images/Password-Generator.png" class="img-fluid" alt="Placeholder">
                   <div class="caption">
-                      <a href="https://lawrencesnead.github.io/Homework-3-Alternate/"><h3>Password Generator</h3></a>
-                      <a href="https://github.com/lawrencesnead/Homework-3"><h3>GitHub Repository</h3></a>
+                      <a href="https://lawrencesnead.github.io/Password-Generator/"><h3>Password Generator</h3></a>
+                      <a href="https://github.com/lawrencesnead/Password-Generator"><h3>GitHub Repository</h3></a>
                   </div>
               </div>
               
